--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-/* Arquivo pau.css */
+/* Arquivo styles.css */
 
 body {
     font-family: Arial, sans-serif;
-    line-height: 1.6;
     margin: 20px;
     padding: 0;
 }
@@ -11,34 +10,6 @@ header {
     background-color: #f2f2f2;
     padding: 10px;
     margin-bottom: 20px;
-}
-
-nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-}
-
-nav ul li {
-    margin-right: 20px;
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: #333;
-}
-
-nav ul li a:hover {
-    text-decoration: underline;
-}
-
-main {
-    padding: 20px;
-}
-
-section {
-    margin-bottom: 30px;
 }
 
 h1 {
@@ -57,13 +28,6 @@ p {
     font-size: 15px;
     font-family: "Times New Roman", serif;
     color: black;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    margin-bottom: 10px;
 }
 
 footer {
