--- a/style.css
+++ b/style.css
@@ -30,9 +30,28 @@ p {
     color: black;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin-bottom: 10px;
+}
+
 footer {
     text-align: center;
     margin-top: 50px;
     padding: 10px;
     background-color: #f2f2f2;
+}
+
+/* Estilos para id e class */
+#example-id {
+    border: 2px solid blue;
+    padding: 10px;
+}
+
+.example-class {
+    background-color: #f9f9f9;
+    padding: 10px;
+    border-left: 5px solid red;
 }
